--- a/study 2/experiment B/test.Rmd
+++ b/study 2/experiment B/test.Rmd
@@ -21,4 +21,11 @@ if (Sys.getenv('FORMAT') == 'pdf') {
 widgetPath <- file.path(Sys.getenv('REL_PATH'), 'widget1.html')
 ```
 
-<p align="center"><iframe width='50%' height='350px' scrolling = 'no' seamless = 'seamless' frameBorder = '0' src='`r widgetPath`' ></iframe></p>
+<p align="center"><iframe width="50%" height='350px' scrolling = 'no' seamless = 'seamless' frameBorder = '0' src='`r widgetPath`' ></iframe></p>
+
+
+```{r stats}
+m <- lm(dist~speed, cars)
+a <- anova(m)
+knitr::kable(a)
+```
